# rust-learnopengl

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml  rust.yml
assets/shaders/: triangle.frag  triangle.vert
src/: main.rs  program.rs  resources.rs  shader.rs  string_utils.rs
