[package]
name = "rust-learn-opengl"
version = "0.1.0"
authors = ["Artur Wyszyński <artur.wyszynski@hitomi.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
sdl2 = "0.35.2"
nalgebra = "0.31.2"
nalgebra-glm = "0.17.0"
imgui = "0.7.0"
imgui-sdl2 = "0.14.1"
imgui-opengl-renderer = "0.11.1"
